Re-arrange directory structure more neatly
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127610 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" type="text/css" href="local/public/style.css">
+    <link rel="stylesheet" type="text/css" href="../local/public/style.css">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
                     <input type="txt" placeholder="Server Name" class="gs-input" id="server-name">
 
                     <button type="submit" class="ger-btn">
-                        <img src="local/public/img/cog.svg" class="gear-icon">
+                        <img src="../local/public/img/cog.svg" class="gear-icon">
                     </button>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 <div class="gs-data-input-wrap">
                     <input type="txt" placeholder="Server Location" class="gs-input" id="server-location">
                     <button type="submit" class="ger-btn">
-                        <img src="local/public/img/cog.svg" class="gear-icon">
+                        <img src="../local/public/img/cog.svg" class="gear-icon">
                     </button>
                 </div>
             </div>
@@ -116,9 +116,9 @@
     </div>
 
     <!-- load JS !-->
-    <script src="local/public/js/socket.io-1.3.2.min.js"></script>
-    <script src="local/public/js/jquery-1.11.1.min.js"></script>
-    <script src="nw.js"></script>
+    <script src="../local/public/js/socket.io-1.3.2.min.js"></script>
+    <script src="../local/public/js/jquery-1.11.1.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
