Update nwjs file layout and terminal color
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127913 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" type="text/css" href="../local/public/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
                     <input type="txt" placeholder="Server Name" class="gs-input" id="server-name">
 
                     <button type="submit" class="ger-btn">
-                        <img src="../local/public/img/cog.svg" class="gear-icon">
+                        <img src="img/cog.svg" class="gear-icon">
                     </button>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 <div class="gs-data-input-wrap">
                     <input type="txt" placeholder="Server Location" class="gs-input" id="server-location">
                     <button type="submit" class="ger-btn">
-                        <img src="../local/public/img/cog.svg" class="gear-icon">
+                        <img src="img/cog.svg" class="gear-icon">
                     </button>
                 </div>
             </div>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="content" id="terminal-view">
-		    <pre id="console" style="display: block; color: white; background-color: black; font-family: monospace; height: 550px; margin: 0px;"></pre>
+		    <pre id="console"></pre>
 	    </div>
 
         <footer>
