Show connected status
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@129412 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -39,7 +39,7 @@
                 <p>Status</p>
 
                 <p class="H_gray">Local: <span class="H_blue"> ON </span></p>
-                <p class="H_gray">Internet: <span class="H_blue"> Connected</span></p>
+                <p class="H_gray">Internet: <span class="H_blue" id="connected"></span></p>
             </div>
 
             <div class="status-data">
